--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,11 @@ body {
     width: 10%; 
 }
 
-#downArrowHover{
+#down-work-arrow-hover{
+    display: none; 
+}
+
+#down-education-arrow-hover{
     display: none; 
 }
 
@@ -71,5 +75,54 @@ body {
     width: 80%;
     margin-top: 20px;
 }
+
+.cards{
+    margin-top: 350px; 
+    width: 80%;
+}
+
+#osisoft-image{
+    width: 80%; 
+    padding-top: 2em;
+    padding-bottom: 2em; 
+    padding-left: 3em; 
+}
+
+#nysci-image{
+    width: 70%; 
+    padding-top: 2em;
+    padding-bottom: 2em; 
+    padding-left: 4em; 
+}
+
+#meta-image{
+    width: 65%;
+    padding-top: 2em;
+    padding-bottom: 2em; 
+    padding-left: 4em; 
+}
+
+#cornell-image{
+    width: 90%;
+    padding-left: 4em; 
+    padding-top: 4em;
+    padding-bottom: 2em; 
+}
+
+#dyson-image{
+    width: 90%;
+    padding-left: 4em; 
+    padding-top: 4em;
+    padding-bottom: 2em; 
+}
+
+.card{
+    color: #383c44;
+    background-color: #fcf9eb !important;
+}
+
+
+
+
 
 
